# taskclaw

./: Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  homebrew.yml  packages.yml  release.yml  rust.yml  security.yml
benches/: task_operations.rs
cli/: Cargo.toml
cli/src/: main.rs
scripts/: download-binary.ps1  download-binary.sh  install.ps1  install.sh  test-packages.sh  test-static.sh  verify-static.sh
src/: cli.rs  config.rs  lib.rs  main.rs  storage.rs  task.rs  test_utils.rs
src/plugins/: mod.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
taskclaw/: Cargo.toml
taskclaw/src/: config.rs  lib.rs  task.rs  task_manager.rs
tests/: integration_tests.rs
tui/: Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs
