[package]
name = "taskclaw"
version = "0.1.0"
edition = "2024"
description = "A simple CLI task tracking tool"
authors = ["TaskClaw Contributors"]
license = "MIT"
repository = "https://github.com/r-raymond/taskclaw"
homepage = "https://github.com/r-raymond/taskclaw"
readme = "README.md"
keywords = ["cli", "task", "todo", "productivity", "tracking"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
ratatui = "0.28"
crossterm = "0.28"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "task_operations"
harness = false

[lib]
name = "taskclaw"
path = "src/lib.rs"

[[bin]]
name = "claw"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "TaskClaw Contributors <noreply@example.com>"
copyright = "2024, TaskClaw Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple and efficient command-line task tracking tool written in Rust.
Features include adding, completing, removing tasks, and shell completions."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/claw", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/claw/README", "644"],
    ["target/release/build/*/out/man/claw.1", "usr/share/man/man1/", "644"],
    ["target/release/build/*/out/completions/claw.bash", "usr/share/bash-completion/completions/claw", "644"],
    ["target/release/build/*/out/completions/_claw", "usr/share/zsh/site-functions/", "644"],
    ["target/release/build/*/out/completions/claw.fish", "usr/share/fish/completions/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/claw", dest = "/usr/bin/claw", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/claw/README", mode = "644" },
    { source = "target/release/build/*/out/man/claw.1", dest = "/usr/share/man/man1/claw.1", mode = "644" },
    { source = "target/release/build/*/out/completions/claw.bash", dest = "/etc/bash_completion.d/claw", mode = "644" },
    { source = "target/release/build/*/out/completions/_claw", dest = "/usr/share/zsh/site-functions/_claw", mode = "644" },
    { source = "target/release/build/*/out/completions/claw.fish", dest = "/usr/share/fish/completions/claw.fish", mode = "644" },
]

