[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
taskclaw = { path = "../taskclaw" }
uuid = { version = "1.17.0", features = ["serde"] }
utils = { path = "../utils" }
env_logger = "0.11.8"

[[bin]]
name = "claw"
path = "src/main.rs"
